# eulumdat-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: eulumdat_format.md
examples/: 01_basic_usage.md  01_basic_usage.py  02_polar_diagram.md  02_polar_diagram.py  basic_usage.py
pyldt/: parser.py  writer.py
src/pyldt/: __init__.py  model.py  writer.py
tests/: test_parser.py
tests/samples/: sample1.ldt  sample10.ldt  sample2.ldt  sample3.ldt  sample4.ldt  sample5.ldt  sample6.ldt  sample7.ldt  sample8.ldt  sample9.ldt
